--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -1,38 +1,3 @@
-<%@page import="java.sql.DriverManager"%>
-<%@page import="java.sql.Connection"%>
-<%@page contentType="text/html" pageEncoding="UTF-8"%>
-
-<%  
-Connection conexion=null;
- 
-    String mensaje="";
- 
-    /*parametros para la conexion*/
-    String driver = "com.mysql.jdbc.Driver";
-    String url = "jdbc:mysql://us-cdbr-iron-east-01.cleardb.net/heroku_38a1979085a7b59";
-    String usuario = "becdff0c984df4";
-    String clave = "51e4aab00b5ef5b";
-    /*procedimiento ario = "roode la conexion*/
-    try{
-        Class.forName("com.mysql.jdbc.Driver");
-        conexion = DriverManager.getConnection(url,usuario,clave);
- 
-        /*guardando la conexion en la session*/
-        session.setAttribute("conexion",conexion);
-    } catch (Exception ex){
-        mensaje=ex.toString();
-    }
- 
-    mensaje="conectado";
-    if(conexion.isClosed())
-        mensaje="desconectado";
-
-String Query="CALL VerCategorias();";
-Statement Consulta = conexion.createStatement();
-ResultSet rs =Consulta.executeQuery(Query);
-
-%>
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -46,12 +11,14 @@ ResultSet rs =Consulta.executeQuery(Query);
   <link rel="stylesheet" href="dist/css/AdminLTE.min.css">
   <!-- Skins varias  -->
   <link rel="stylesheet" href="dist/css/skins/_all-skins.min.css">
-  <!-- Estilo de productos  -->
+    <!-- Estilo de productos  -->
   <link rel="stylesheet" href="dist/css/Productos.css">
+
 </head>
 
 <!-- Tipo de de menu -->
 <body class="skin-black-light fixed layout-top-nav">
+
 <div class="wrapper">
 
   <header class="main-header">
@@ -59,89 +26,55 @@ ResultSet rs =Consulta.executeQuery(Query);
   <div class="container">
 
         <div class="navbar-header">
-          <a href="Index.php" class="navbar-brand"> <p style="border-style: solid; border-width:2px;"><b>El</b>Merca</p></a>
+          <a href="index.html" class="navbar-brand">ElMecado</a>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+            <i class="fa fa-bars"></i>
+          </button>
         </div>
 
         <!-- Menu Principal -->
         <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
           <ul class="nav navbar-nav">
              <li class="dropdown">
-             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Categorias<span class="caret"></span></a>
+             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
              <ul class="dropdown-menu" role="menu">
-                <%
-                 while (rs.next())
-                 {
-                 out.println("<li> <a href='Categoria.jsp?ID="+rs.getString("nombre_categoria")+"</a></li>");
-                 }
-                %>
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
              </ul>
              </li>
           </ul>
          <!-- Buscador -->
           <form class="navbar-form navbar-left" role="search">
-            <!--Buscar input-->
             <div class="form-group">
-            <input type="text" class="form-control" id="navbar-search-input" placeholder="Search" >
-            </div>
-            <!--Buscar boton-->
-            <div class="form-group">
-            <button onclick="Buscar()" type="button" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
+            <input type="text" class="form-control" id="navbar-search-input" placeholder="Search">
             </div>
           </form>
 
          </div>
 
-         <div class='navbar-custom-menu'>
-         <ul class='nav navbar-nav'>
-         <li class="dropdown messages-menu open">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
-              <i class="glyphicon">&#xe116;</i>
+        <!-- Usuario -->
+        <div class="navbar-custom-menu">
+            <ul class="nav navbar-nav">
+            <li class=" user user-menu">
+            <a href="#" > 
+            <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+            <span class="hidden-xs">Iniciar</span>
             </a>
-            <ul class="dropdown-menu">
-              <li class="header">Carrito de compras</li>
-              <li>
-                <!-- inner menu: contains the actual data -->
-                <ul class="menu">
-                  <li><!-- start message -->
-                    <a href="#">
-                      <div class="pull-left">
-                        <img src="dist/img/photo1.png"  alt="User Image">
-                      </div>
-                      <h4>
-                        Producto
-                        <small><i class="fa fa-clock-o"></i> Precio</small>
-                      </h4>
-                      <p>Descripcion</p>
-                    </a>
-                  </li>
-                  <!-- end message -->
-                </ul>
-              </li>
-              <li class="footer"><a href="Pagar.php">Pagar</a></li>
+            </li>
             </ul>
-          </li>
-        </ul>
-      </div>
-         
-         <div class='navbar-custom-menu'>
-                    <ul class='nav navbar-nav'>
-                    <li class='user user-menu'>
-                    <a href='Login.php' > 
-                    <span class='hidden-xs'>Login</span>
-                    </a>
-                    </li>
-                    </ul>
-              </div>
-         <!-- Usuario -->
-              <div class='navbar-custom-menu'>
-                    <ul class='nav navbar-nav'>
-                    <li class='user user-menu'>
-                    <a href='Registro.php' > 
-                    <span class='hidden-xs'>Registro</span>
-                    </a>
-                    </li>
-                    </ul>
-              </div>
+        </div>
+
+        <div class="navbar-custom-menu">
+            <ul class="nav navbar-nav">
+            <li class=" user user-menu">
+            <a href="#" > 
+            <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+            <span class="hidden-xs">Registro</span>
+            </a>
+            </li>
+            </ul>
+        </div>
 
   </div>
   </nav>
@@ -149,7 +82,48 @@ ResultSet rs =Consulta.executeQuery(Query);
 
   <div class="content-wrapper">
     <!-- Contenido de la pagina-->
-      <section class="content" id="Contenido">
+      <section class="content">
+
+<div class="box box-widget widget-user">
+            <!-- Add the bg color to the header using any of the bg-* classes -->
+            <div class="widget-user-header bg-black" style="background: url('dist/img/photo1.png') center center;">
+              <h3 class="widget-user-username">Elizabeth Pierce</h3>
+              <h5 class="widget-user-desc">Web Designer</h5>
+            </div>
+            <div class="widget-user-image">
+              <img class="img-circle" src="dist/img/user3-128x128.jpg" alt="User Avatar">
+            </div>
+            <div class="box-footer">
+              <div class="row">
+                <div class="col-sm-4 border-right">
+                  <div class="description-block">
+                    <h5 class="description-header">3,200</h5>
+                    <span class="description-text">SALES</span>
+                  </div>
+                  <!-- /.description-block -->
+                </div>
+                <!-- /.col -->
+                <div class="col-sm-4 border-right">
+                  <div class="description-block">
+                    <h5 class="description-header">13,000</h5>
+                    <span class="description-text">FOLLOWERS</span>
+                  </div>
+                  <!-- /.description-block -->
+                </div>
+                <!-- /.col -->
+                <div class="col-sm-4">
+                  <div class="description-block">
+                    <h5 class="description-header">35</h5>
+                    <span class="description-text">  <?php echo "string";  ?></span>
+                  </div>
+                  <!-- /.description-block -->
+                </div>
+                <!-- /.col -->
+              </div>
+              <!-- /.row -->
+            </div>
+          </div>
+
          <ul class="timeline">
           
             <!-- Promociones -->
@@ -164,7 +138,7 @@ ResultSet rs =Consulta.executeQuery(Query);
                     <div class="card">
                     <img src="http://placehold.it/150x100" alt="..." class="margin">
                     <div class="container">
-                    <a href="Articulo.php"><h3>Producto</h3></a>
+                    <h3>Jane Doe</h3>
                     </div>
                    </div>
                    </div>
@@ -186,7 +160,7 @@ ResultSet rs =Consulta.executeQuery(Query);
                     <div class="card">
                     <img src="http://placehold.it/150x100" alt="..." class="margin">
                     <div class="container">
-                    <h3>Producto</h3>
+                    <h3>Jane Doe</h3>
                     </div>
                    </div>
                    </div>
@@ -208,7 +182,7 @@ ResultSet rs =Consulta.executeQuery(Query);
                     <div class="card">
                     <img src="http://placehold.it/150x100" alt="..." class="margin">
                     <div class="container">
-                    <h3>Producto</h3>
+                    <h3>Jane Doe</h3>
                     </div>
                    </div>
                    </div>
@@ -240,8 +214,6 @@ ResultSet rs =Consulta.executeQuery(Query);
 <script src="dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="dist/js/demo.js"></script>
-<!--Scrip para buscar-->
-<script src="js/Buscar.js"></script>
 
 </body>
 </html>
